--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>ArpaRec Registry</title>
-  </head>
-  <body>
-    <h2>
-      Marrow SDK
-    </h2>
-    <a href="https://upm.arparec.dev/marrow.json">https://upm.arparec.dev/marrow.json</a>
-
-    <br>
-    
-    <h2>
-      Marrow Backlot
-    </h2>
-    <a href="https://upm.arparec.dev/marrowbacklot.json">https://upm.arparec.dev/marrowbacklot.json</a>
-  </body>
-</html>
+{
+  "objects": [
+    {
+      "package": {
+        "name": "com.arparec.strata",
+        "version": "2.0.0",
+        "description": "The official Strata Engine plugin for Unity.",
+        "links": {
+          "npm": "com.arparec.strata"
+        }
+      }
+    },
+	{
+      "package": {
+        "name": "com.arparec.hpmatfix",
+        "version": "1.0.0",
+        "description": "Fixes materials for the HPCOS BONELAB Mod.",
+        "links": {
+          "npm": "com.arparec.hpmatfix"
+        }
+      }
+    }
+  ]
+}
